--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,7 @@
+:root {
+  --credit-card-width: 337px;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -9,6 +13,7 @@ html, body {
   min-height: 100svh;
   font-family: Arial, Helvetica, sans-serif;
   overflow-x: hidden;
+  background-color: #FFFFFF;
 }
 
 nav {
@@ -19,28 +24,29 @@ nav {
   width: 100%;
   justify-content: space-between;
   align-items: center;
-  background: rgba(255, 255, 255, .4);
-  backdrop-filter: blur(3px); 
-}
+  background: transparent;
+  backdrop-filter: blur(3px);
+  mix-blend-mode: difference;
 
-nav a {
-  text-decoration: none;
-  color: #000000;
-  font-size: .75rem;
-  text-transform: uppercase;
-  line-height: 1;
-}
+  a {
+    text-decoration: none;
+    font-size: .75rem;
+    text-transform: uppercase;
+    line-height: 1;
+    color: #FFFFFF;
+  }
 
-nav div {
-  display: flex;
-  gap: 2rem;
-  padding: 1rem;
-}
+  div {
+    display: flex;
+    gap: 2rem;
+    padding: 1rem 2rem;
+  }
 
-nav .logo {
-  font-size: 1.5rem;
-  font-weight: 700;
-  text-transform: uppercase;
+  .logo {
+    font-size: 1.5rem;
+    font-weight: 700;
+    text-transform: uppercase;
+  }
 }
 
 header, main {
@@ -51,4 +57,63 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
+  background: #000000;
+  color: #FFFFFF;
+}
+
+main {
+  padding-block: 5rem; /* Just to create some space for the nav */
+
+  section {
+    display: flex;
+    gap: 2rem;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+  }
+}
+
+.card {
+  width: var(--credit-card-width);
+  aspect-ratio: 1.586 / 1;
+  border-radius: calc((1 / 50) * var(--credit-card-width));
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  font-family: monospace;
+  
+  .card__header {
+    flex: .5;
+  }
+
+  .card__main {
+    .number {
+      font-size: 1.75rem;
+    }
+  }
+
+  .card__footer {
+    display: flex;
+    justify-content: space-between;
+
+    .card__footer__label {
+      display: block;
+      font-size: .75rem;
+    }
+
+    .card__footer__value {
+      font-size: 1rem;
+      font-weight: 700;
+    }
+  }
+}
+
+.gradient-bg {
+  background: #000000;
+  background: -webkit-linear-gradient(to right, #434343, #000000);
+  background: linear-gradient(120deg, #434343, #000000);
+  color: #FFFFFF;
 }
