--- a/styles/style.css
+++ b/styles/style.css
@@ -12,7 +12,7 @@ html, body {
   width: 100vw;
   min-height: 100svh;
   font-family: Arial, Helvetica, sans-serif;
-  overflow-x: hidden;
+  overflow-x: clip;
   background-color: #FFFFFF;
 }
 
@@ -84,6 +84,8 @@ main {
   flex-direction: column;
   justify-content: space-between;
   font-family: monospace;
+  opacity: 0;
+  translate: 0 100px;
   
   .card__header {
     flex: .5;
@@ -116,4 +118,22 @@ main {
   background: -webkit-linear-gradient(to right, #434343, #000000);
   background: linear-gradient(120deg, #434343, #000000);
   color: #FFFFFF;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  @supports (animation-timeline: scroll()) {
+    .card {
+      animation: 1ms cubic-bezier(0.2, 1.2, 0.8, 0.8) both card-animation;
+      animation-timeline: view();
+      animation-range-start: 50px;
+      animation-range-end: 300px;
+    } 
+  }
+}
+
+@keyframes card-animation {
+  to {
+    opacity: 1;
+    translate: 0 0;
+  }
 }
