--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,5 @@
 :root {
+  --font-family: Arial, Helvetica, sans-serif;
   --credit-card-width: 337px;
 }
 
@@ -11,7 +12,7 @@
 html, body {
   width: 100vw;
   min-height: 100svh;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-family);
   overflow-x: clip;
   background-color: #FFFFFF;
 }
@@ -66,13 +67,20 @@ main {
 
   section {
     display: flex;
-    gap: 2rem;
+    gap: 4rem;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 100%;
     height: 100%;
   }
+}
+
+.title {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: .5rem;
 }
 
 .card {
@@ -84,8 +92,6 @@ main {
   flex-direction: column;
   justify-content: space-between;
   font-family: monospace;
-  opacity: 0;
-  translate: 0 100px;
   
   .card__header {
     flex: .5;
@@ -113,6 +119,20 @@ main {
   }
 }
 
+button {
+  padding: 1rem 2rem;
+  border: none;
+  border-radius: .5rem;
+  font-family: var(--font-family);
+  font-size: 1rem;
+  font-weight: 600;
+  text-transform: uppercase;
+
+  &:hover {
+    cursor: pointer;
+  }
+}
+
 .gradient-bg {
   background: #000000;
   background: -webkit-linear-gradient(to right, #434343, #000000);
@@ -122,12 +142,23 @@ main {
 
 @media (prefers-reduced-motion: no-preference) {
   @supports (animation-timeline: scroll()) {
-    .card {
+    .card--fade-in {
+      opacity: 0;
+      translate: 0 100px;
       animation: 1ms cubic-bezier(0.2, 1.2, 0.8, 0.8) both card-animation;
       animation-timeline: view();
-      animation-range-start: 50px;
-      animation-range-end: 300px;
-    } 
+      animation-range-start: cover 5%;
+      animation-range-end: cover 35%;
+    }
+
+    .txt--fade-in {
+      opacity: 0;
+      translate: 0 50px;
+      animation: 1ms cubic-bezier(0.2, 1.2, 0.8, 0.8) both card-animation;
+      animation-timeline: view();
+      animation-range-start: cover 5%;
+      animation-range-end: cover 35%;
+    }
   }
 }
 
