--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,7 @@
 :root {
   --font-family: Arial, Helvetica, sans-serif;
   --credit-card-width: 337px;
+  --transition-duration: .5s;
 }
 
 * {
@@ -60,6 +61,10 @@ header {
   align-items: center;
   background: #000000;
   color: #FFFFFF;
+}
+
+header h1 {
+  margin-bottom: .5rem;
 }
 
 main {
@@ -167,4 +172,13 @@ button {
     opacity: 1;
     translate: 0 0;
   }
+}
+
+.txt-to-animate {
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+}
+
+.txt-to-animate .word {
+  transform: translateY(50px);
+  transition: transform var(--transition-duration);
 }
