--- a/styles/style.css
+++ b/styles/style.css
@@ -145,40 +145,18 @@ button {
   color: #FFFFFF;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  @supports (animation-timeline: scroll()) {
-    .card--fade-in {
-      opacity: 0;
-      translate: 0 100px;
-      animation: 1ms cubic-bezier(0.2, 1.2, 0.8, 0.8) both card-animation;
-      animation-timeline: view();
-      animation-range-start: cover 5%;
-      animation-range-end: cover 35%;
-    }
-
-    .txt--fade-in {
-      opacity: 0;
-      translate: 0 50px;
-      animation: 1ms cubic-bezier(0.2, 1.2, 0.8, 0.8) both card-animation;
-      animation-timeline: view();
-      animation-range-start: cover 5%;
-      animation-range-end: cover 35%;
-    }
-  }
+.card--animation .card {
+  opacity: 0;
+  transform: translateY(100px);
+  transition-property: transform, opacity;
+  transition-duration: var(--transition-duration);
 }
 
-@keyframes card-animation {
-  to {
-    opacity: 1;
-    translate: 0 0;
-  }
-}
-
-.txt-to-animate {
+.txt--animation {
   clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
 }
 
-.txt-to-animate .word {
+.txt--animation .word {
   transform: translateY(50px);
   transition: transform var(--transition-duration);
 }
