--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 :root {
   --font-family: Arial, Helvetica, sans-serif;
-  --credit-card-width: 337px;
+  --credit-card-width: 250px;
   --transition-duration: .5s;
 }
 
@@ -48,6 +48,7 @@ nav {
     font-size: 1.5rem;
     font-weight: 700;
     text-transform: uppercase;
+    letter-spacing: 2px;
   }
 }
 
@@ -88,9 +89,17 @@ main {
   gap: .5rem;
 }
 
+.card--animation {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .card {
   width: var(--credit-card-width);
-  aspect-ratio: 1.586 / 1;
+  aspect-ratio: 1 / 1.586;
   border-radius: calc((1 / 50) * var(--credit-card-width));
   padding: 1rem;
   display: flex;
@@ -138,6 +147,20 @@ button {
   }
 }
 
+footer {
+  display: flex;
+  justify-content: center;
+  padding-block: 1rem;
+  background: transparent;
+  backdrop-filter: blur(3px);
+
+  .footer__logo {
+    font-weight: 700;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+  }
+}
+
 .gradient-bg {
   background: #000000;
   background: -webkit-linear-gradient(to right, #434343, #000000);
@@ -145,12 +168,12 @@ button {
   color: #FFFFFF;
 }
 
-.card--animation .card {
+/* .card--animation .card {
   opacity: 0;
-  transform: translateY(100px);
+  transform: translateY(200px) scale(0);
   transition-property: transform, opacity;
   transition-duration: var(--transition-duration);
-}
+} */
 
 .txt--animation {
   clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
