--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 :root {
-  --font-family: Arial, Helvetica, sans-serif;
+  --font-family: "Roboto", Arial, Helvetica, sans-serif;
+  --font-family-mono: "Roboto Mono", monospace;
   --credit-card-width: 250px;
   --transition-duration: .5s;
 }
@@ -16,6 +19,9 @@ html, body {
   font-family: var(--font-family);
   overflow-x: clip;
   background-color: #FFFFFF;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
 }
 
 nav {
@@ -29,8 +35,10 @@ nav {
   background: transparent;
   backdrop-filter: blur(3px);
   mix-blend-mode: difference;
+  padding-inline: 2rem;
 
   a {
+    padding: .5rem 1rem;
     text-decoration: none;
     font-size: .75rem;
     text-transform: uppercase;
@@ -40,8 +48,7 @@ nav {
 
   div {
     display: flex;
-    gap: 2rem;
-    padding: 1rem 2rem;
+    gap: 1rem;
   }
 
   .logo {
@@ -49,6 +56,7 @@ nav {
     font-weight: 700;
     text-transform: uppercase;
     letter-spacing: 2px;
+    padding-block: 1rem;
   }
 }
 
@@ -82,7 +90,7 @@ main {
   }
 }
 
-.title {
+.section__title--center {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -106,6 +114,7 @@ main {
   flex-direction: column;
   justify-content: space-between;
   font-family: monospace;
+  cursor: default;
   
   .card__header {
     flex: .5;
@@ -129,6 +138,7 @@ main {
     .card__footer__value {
       font-size: 1rem;
       font-weight: 700;
+      text-transform: uppercase;
     }
   }
 }
@@ -175,11 +185,16 @@ footer {
   transition-duration: var(--transition-duration);
 } */
 
-.txt--animation {
+.txt--animation .title,
+.txt--animation .subtitle {
   clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
 }
 
 .txt--animation .word {
   transform: translateY(50px);
   transition: transform var(--transition-duration);
+}
+
+.text--shuffle {
+  font-family: var(--font-family-mono);
 }
