--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 
 :root {
-  --font-family: "Roboto", Arial, Helvetica, sans-serif;
-  --font-family-mono: "Roboto Mono", monospace;
+  --font-family: "Inter", Arial, Helvetica, sans-serif;
   --credit-card-width: 250px;
   --transition-duration: .5s;
 }
@@ -31,24 +30,31 @@ nav {
   display: flex;
   width: 100%;
   justify-content: space-between;
-  align-items: center;
+  align-items: stretch;
   background: transparent;
   backdrop-filter: blur(3px);
   mix-blend-mode: difference;
   padding-inline: 2rem;
 
-  a {
-    padding: .5rem 1rem;
-    text-decoration: none;
-    font-size: .75rem;
-    text-transform: uppercase;
-    line-height: 1;
-    color: #FFFFFF;
-  }
-
   div {
     display: flex;
     gap: 1rem;
+    align-items: center;
+  }
+
+  a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-width: 6.5rem;
+    height: 100%;
+    padding: .5rem 1rem;
+    font-size: .75rem;
+    text-align: center;
+    text-decoration: none;
+    text-transform: uppercase;
+    line-height: 1;
+    color: #FFFFFF;
   }
 
   .logo {
@@ -81,7 +87,7 @@ main {
 
   section {
     display: flex;
-    gap: 4rem;
+    gap: 2rem;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -97,15 +103,17 @@ main {
   gap: .5rem;
 }
 
-.card--animation {
+.card__container {
+  flex: .5;
+  position: relative;
   width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  min-height: 400px;
 }
 
 .card {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
   width: var(--credit-card-width);
   aspect-ratio: 1 / 1.586;
   border-radius: calc((1 / 50) * var(--credit-card-width));
@@ -115,18 +123,30 @@ main {
   justify-content: space-between;
   font-family: monospace;
   cursor: default;
+  color: #000000;
+
+  &:hover {
+    transform: rotate(45);
+  }
+
+  &.black {
+    background: #000000;
+    background: -webkit-linear-gradient(to right, #434343, #000000);
+    background: linear-gradient(120deg, #434343, #000000);
+    color: #FFFFFF;
+  }
   
-  .card__header {
+  & > .card__header {
     flex: .5;
   }
 
-  .card__main {
+  & > .card__main {
     .number {
       font-size: 1.75rem;
     }
   }
 
-  .card__footer {
+  & > .card__footer {
     display: flex;
     justify-content: space-between;
 
@@ -144,6 +164,7 @@ main {
 }
 
 button {
+  min-width: 10rem;
   padding: 1rem 2rem;
   border: none;
   border-radius: .5rem;
@@ -151,9 +172,20 @@ button {
   font-size: 1rem;
   font-weight: 600;
   text-transform: uppercase;
+  transition-property: background-color, color;
+  transition: var(--transition-duration) ease-in-out;
 
-  &:hover {
-    cursor: pointer;
+  &.primary {
+    background-color: #000000;
+    color: #FFFFFF;
+    border: 2px solid #000000;
+    
+    &:hover {
+      cursor: pointer;
+      border: 2px solid #000000;
+      background-color: #FFFFFF;
+      color: #000000;
+    }
   }
 }
 
@@ -171,30 +203,23 @@ footer {
   }
 }
 
-.gradient-bg {
-  background: #000000;
-  background: -webkit-linear-gradient(to right, #434343, #000000);
-  background: linear-gradient(120deg, #434343, #000000);
-  color: #FFFFFF;
-}
-
-/* .card--animation .card {
+.card--animation .card {
   opacity: 0;
-  transform: translateY(200px) scale(0);
+  transform-origin: bottom center;
+  /* transform: translateY(200px) scale(0); */
   transition-property: transform, opacity;
   transition-duration: var(--transition-duration);
-} */
+}
 
 .txt--animation .title,
-.txt--animation .subtitle {
+.header__txt--animation .title,
+.txt--animation .subtitle,
+.header__txt--animation .subtitle {
   clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
 }
 
-.txt--animation .word {
+.txt--animation .word, 
+.header__txt--animation .word {
   transform: translateY(50px);
   transition: transform var(--transition-duration);
-}
-
-.text--shuffle {
-  font-family: var(--font-family-mono);
 }
