--- a/styles/style.css
+++ b/styles/style.css
@@ -83,8 +83,6 @@ header h1 {
 }
 
 main {
-  padding-block: 5rem; /* Just to create some space for the nav */
-
   section {
     display: flex;
     gap: 5rem;
@@ -93,6 +91,7 @@ main {
     align-items: center;
     width: 100%;
     height: 100%;
+    padding-block: 5rem; /* Just to create some space for the nav */
   }
 }
 
@@ -220,20 +219,16 @@ footer {
 .card--animation .card {
   opacity: 0;
   transform-origin: bottom center;
-  /* transform: translateY(200px) scale(0); */
   transition-property: transform, opacity;
   transition-duration: var(--transition-duration);
 }
 
 .txt--animation .title,
-.header__txt--animation .title,
-.txt--animation .subtitle,
-.header__txt--animation .subtitle {
+.txt--animation .subtitle {
   clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
 }
 
-.txt--animation .word, 
-.header__txt--animation .word {
+.txt--animation .word {
   transform: translateY(50px);
   transition: transform var(--transition-duration);
 }
